Pre-fill billing contact info with first covered individual. Fix prev button placements.

--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
@@ -159,6 +159,10 @@ ol.form-progress {
     }
   }
 
+  #trip-details .buttons {
+    justify-content: flex-end;
+  }
+
   input#confirmation + .help {
     display: none !important;
   }
